# ktrip

./: .clang-format  .craft.ini  .craftignore  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AndroidManifest.xml  CMakeLists.txt  COPYING  COPYING.LIB  README.md  REUSE.toml  build.gradle  clickable.json  flatpak-test.py  manifest.json.in  org.kde.ktrip.appdata.xml  qmake.conf  spell.py
.reuse/: dep5
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: splash.xml
android/res/drawable-v24/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/src/org/kde/ktrip/: Activity.java  DatePicker.java  TimePicker.java
autotests/: CMakeLists.txt
fastlane/metadata/android/: full_description.txt  title.txt
po/ar/: ktrip.po
po/ast/: ktrip.po
po/ca/: ktrip.po
po/ca@valencia/: ktrip.po
po/cs/: ktrip.po
po/de/: ktrip.po
po/en_GB/: ktrip.po
po/eo/: ktrip.po
po/es/: ktrip.po
po/et/: ktrip.po
po/eu/: ktrip.po
po/fi/: ktrip.po
po/fr/: ktrip.po
po/ga/: ktrip.po
po/gl/: ktrip.po
po/he/: ktrip.po
po/hi/: ktrip.po
po/hu/: ktrip.po
po/ia/: ktrip.po
po/it/: ktrip.po
po/ja/: ktrip.po
po/ka/: ktrip.po
po/ko/: ktrip.po
po/lt/: ktrip.po
po/lv/: ktrip.po
po/nl/: ktrip.po
po/nn/: ktrip.po
po/pl/: ktrip.po
po/pt/: ktrip.po
po/pt_BR/: ktrip.po
po/ru/: ktrip.po
po/sa/: ktrip.po
po/sk/: ktrip.po
po/sl/: ktrip.po
po/sv/: ktrip.po
po/tr/: ktrip.po
po/ug/: ktrip.po
po/uk/: ktrip.po
po/x-test/: ktrip.po
po/zh_CN/: ktrip.po
po/zh_TW/: ktrip.po
src/: CMakeLists.txt  Messages.sh  androidutils.cpp  androidutils.h  controller.cpp  controller.h  formatter.cpp  formatter.h  ktripsettings.kcfg  ktripsettings.kcfgc  localizer.cpp  localizer.h  locationcache.cpp  locationcache.h  locationcachemodel.cpp  locationcachemodel.h  locationquerymodel.cpp  locationquerymodel.h  main.cpp  org.kde.ktrip.desktop  querycontroller.cpp  querycontroller.h  resources.qrc
src/dateandtime/: CMakeLists.txt  ClockFace.qml  DateInput.qml
src/dateandtime/lib/: knumbermodel.cpp  knumbermodel.h  plugin.cpp  timezonedata.h  timezonemodel.cpp  timezonemodel.h  timezonesi18n.cpp
src/org/kde/ktrip/: Activity.java  DatePicker.java  TimePicker.java
src/qml/: BackendPage.qml  ConnectionDetailsPage.qml  ConnectionHeading.qml  ConnectionsPage.qml  CountryComboBox.qml  DateInput.qml  DatePickerButton.qml  DelayRow.qml  DepartureQueryPage.qml  DeparturesPage.qml  JourneyQueryPage.qml  LocationQueryPage.qml  Main.qml  MapPage.qml  MapView.qml  QueryPage.qml  StartPage.qml  StopPickerPage.qml  TimePickerButton.qml  main.qml
